--- a/app_client/index.html
+++ b/app_client/index.html
@@ -15,8 +15,8 @@
         <div ng-view>
             <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
             <script src="/bootstrap/js/bootstrap.min.js"></script>
-            <!-- <script src="client_app.min.js"></script> -->
-            <script src="/angular/angular.js"></script>
+            <script src="client_app.min.js"></script>
+            <!-- <script src="/angular/angular.js"></script>
             <script src="/angular-route/angular-route.js"></script>
             <script src="/angular-sanitize/angular-sanitize.min.js"></script>
             <script src="/angular-ui-bootstrap/ui-bootstrap-tpls-2.5.0.min.js"></script>
@@ -37,7 +37,7 @@
             <script src="/common/directives/pageHeader/pageHeader.directive.js"></script>
             <script src="/common/directives/locationInfo/locationInfo.directive.js"></script>
             <script src="/common/directives/ratingStar/ratingStar.directive.js"></script>
-            <script src="/common/directives/navigator/navigator.controller.js"></script>            
+            <script src="/common/directives/navigator/navigator.controller.js"></script>             -->
         </div>
     </div>
     <page-footer></page-footer>
