--- a/app_client/index.html
+++ b/app_client/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="/stylesheets/style.css">
     <link rel="stylesheet" href="/stylesheets/styleComment.css">
+    <link rel="shortcut icon" href="/images/icon.png" type="image/x-icon">
 </head>
 
 <body>
